--- a/config/autolrc_config_example.json
+++ b/config/autolrc_config_example.json
@@ -9,5 +9,7 @@
     "MAX_RETRIES": 3,
     "RETRY_DELAY": 5,
     "USE_VOCAL_ISOLATION": true,
-    "CREATE_LRC": true
+    "LANGUAGE": "Sinhala",
+    "CREATE_LRC": true,
+    "CREATE_TXT": true
 }
