--- a/config/autolrc_config.json
+++ b/config/autolrc_config.json
@@ -9,5 +9,6 @@
     "MAX_RETRIES": 3,
     "RETRY_DELAY": 5,
     "USE_VOCAL_ISOLATION": true,
+    "LANGUAGE": "Sinhala",
     "CREATE_LRC": true
 }
