--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 python-dotenv>=1.0.0
 transformers>=4.30.0
 torch>=2.0.0
-numpy>=1.24.0
+numpy>=1.21.0
 soundfile>=0.12.1
 librosa>=0.10.0
 demucs>=4.0.0
@@ -10,3 +10,8 @@ google-generativeai>=0.3.0
 python-magic>=0.4.27
 pytest>=7.4.0
 pytest-asyncio>=0.21.0
+torchaudio>=2.0.0
+pydub>=0.25.1
+requests>=2.31.0
+aiohttp>=3.9.0
+tqdm>=4.66.0
